--- a/taskbox/package.json
+++ b/taskbox/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.8.7",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
+    "@storybook/addon-storyshots": "^5.3.14",
     "@storybook/addons": "^5.3.14",
     "@storybook/vue": "^5.3.14",
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -32,6 +33,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
+    "jest-vue-preprocessor": "^1.7.1",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.11"
   }
